# LanceDbCSharp

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  nuget.Dockerfile
.devcontainer/: devcontainer.json
cs/hello_ffi/: hello_ffi.sln
cs/hello_ffi/ApiTestbed/: ApiTestbed.csproj  Helpers.cs  Program.cs
cs/hello_ffi/LanceDbClient/: ArrayHelpers.cs  BadVectorHandling.cs  BaseReranker.cs  CompactionMetrics.cs  Connection.cs  ConnectionAsync.cs  FFI.cs  Ffi.cs  HybridQueryBuilder.cs  IConnection.cs  ILanceDb.cs  ILanceHybridQueryBuilder.cs  ILanceMergeInsertBuilder.cs  ILanceQueryBuilder.cs  ILanceVectorQueryBuilder.cs  IReranker.cs  ITable.cs  IndexConfig.cs  IndexStatistics.cs  IndexType.cs  LanceDbClient.csproj  LanceDbClient.nuspec  MergeInsertBuilder.cs  MergeInsertBuilderAsync.cs  Metric.cs  OptimizeStats.cs  QueryBuilder.cs  QueryBuilderAsync.cs  QueryType.cs  RRFReranker.cs  RemovalStats.cs  Reranker.cs  ScalarIndexType.cs  Table.cs  TableAsync.cs  VectorQueryBuilder.cs  WriteMode.cs
cs/hello_ffi/LanceDbClientTests/: ArrayHelpers.cs  Connections.cs  Helpers.cs  LanceDbClientTests.csproj  MergeInsert.cs  Queries.cs  Reranking.cs  Tables.cs
cs/hello_ffi/LanceDbInterface/: BadVectorHandling.cs  CompactionMetrics.cs  IConnection.cs  ILanceDb.cs  ILanceHybridQueryBuilder.cs  ILanceMergeInsertBuilder.cs  ILanceQueryBuilder.cs  ILanceVectorQueryBuilder.cs  IReranker.cs  ITable.cs  IndexConfig.cs  IndexStatistics.cs  IndexType.cs  LanceDbInterface.csproj  Metric.cs  OptimizeStats.cs  QueryType.cs  RemovalStats.cs  ScalarIndexType.cs  WriteMode.cs
cs/hello_ffi/LanceDbNetInterface/: LanceDbNetInterface.csproj
cs/hello_ffi/hello_ffi/: Program.cs
cs/hello_ffi/hello_ffi_bindgen/: NativeMethods.g.cs  Program.cs
cs/hello_ffi/lance_sync_client/: Program.cs  lance_sync_client.csproj
rust/: Cargo.toml  README.md
rust/batch_testing/: Cargo.toml
rust/batch_testing/src/: main.rs
rust/hello_lancedb/: Cargo.toml  README.md
rust/hello_lancedb/src/: main.rs
rust/lance_sync_client/: Cargo.toml
rust/lance_sync_client/src/: batch_handler.rs  blob_handler.rs  connection_handle.rs  connection_handler.rs  event_loop.rs  exports.rs  lib.rs  serialization.rs  string_list_handler.rs  table_handler.rs  testing.rs
rust/lance_sync_client/src/event_loop/: command.rs  connection.rs  errors.rs  helpers.rs  lifecycle.rs  merge_insert.rs  metric.rs  queries.rs  table.rs
rust/test_autobind/: Cargo.toml  build.rs
rust/test_autobind/src/: lib.rs
rust/test_library/: Cargo.toml
rust/test_library/src/: lib.rs
