[package]
name = "lance_sync_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { workspace = true }
lancedb = { workspace = true }
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
futures = { workspace = true }
half = { workspace = true }
strum = {  version = "0.27.1", features = ["derive"] }
chrono = "0.4.39"
